--- a/amplify.yml
+++ b/amplify.yml
@@ -1,17 +1,17 @@
 version: 1
-fronted:
+frontend:
   phases:
     preBuild:
       commands:
-        - cd fronted
+        - cd frontend
         - npm install
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: fronted/build
+    baseDirectory: frontend/build
     files:
       - '**/*'
   cache:
     paths:
-      - fronted/node_modules/**/*
+      - frontend/node_modules/**/*
